# portfolio

./: README.md
codesample/src/: <doxy-config>.bak  BaseGfxApp.cpp  BaseGfxApp.hpp  BaseObject.cpp  BaseObject.hpp  Environment.cpp  Environment.hpp  EnvironmentTests.hpp  Obstacle.cpp  Obstacle.hpp  Robot.hpp  Simulation.hpp  Target.hpp  Walls.hpp  main.cpp
codesample/src/html/: Agent_8cpp.html  Agent_8h.html  Agent_8h_source.html  BaseGfxApp_8h.html  BaseGfxApp_8h_source.html  BaseGfxApp_8hpp.html  BaseGfxApp_8hpp_source.html  BaseObject_8hpp.html  BaseObject_8hpp_source.html  EnvironmentClass_8h.html  EnvironmentClass_8h_source.html  EnvironmentTests_8hpp_source.html  Environment_8hpp.html  Environment_8hpp_source.html  ObstacleClass_8cpp.html  ObstacleClass_8h.html  ObstacleClass_8h_source.html  Obstacle_8cpp.html  Walls_8h.html  (+75 more)
raytracer/: .~lock.writeup.pdf.odt#  CMakeLists.txt  README  polyflatshade.txt  polysmoothshade.txt  singletriangle.txt  texturedpoly.txt  texturedspheres.txt  texturedtriangle.txt
raytracer/src/: DirectionalLight.cpp  DirectionalLight.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Math.cpp  Math.hpp  Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  Pixel.cpp  Pixel.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  RayPayload.cpp  RayPayload.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  Vert.cpp  Vert.hpp  Window.cpp  Window.hpp  main.cpp
robotsim/: README.md
robotsim/src/: BaseGfxApp.cpp  BaseObject.cpp  BaseObject.hpp  Environment.cpp  Environment.hpp  EnvironmentTests.hpp  Obstacle.hpp  Robot.cpp  Robot.hpp  RobotTests.hpp  Simulation.cpp  Simulation.hpp  Target.cpp  Walls.cpp  makefile
(+99 files in other folders)
